<resources>
    <string name="app_name">ZarrinShop</string>
    <string name="home">"خانه"</string>
    <string name="ProductCategoryList">" لیست دسته بندی محصولات "</string>
    <string name="Cart">" سبد خرید "</string>
    <string name="specialOffer">"پیشنهاد ویژه دیجی کالا "</string>
    <string name="bestsellers">"پرفروشترین ها "</string>
    <string name="MostViewed">"پربازدید ترین ها"</string>
    <string name="newest">"جدید ترین ها"</string>
    <string name="setting">"تنطیمات "</string>
    <string name="FrequentlyAskedQuestions">"سوالات متداول"</string>
    <string name="aboutUs">"درباره ما"</string>
    <string name="open">epen drwerlayout</string>
    <string name="close">close drwerlayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connectivity_faild">خطا در اتصال به اینترنت !</string>
    <string name="Checkـnetworkـsettings">بررسی تنظیمات شبکه</string>
    <string name="retry_connected">تلاش مجدد</string>
    <string name="describApp">بررسی انتخاب و خرید آنلاین</string>

    <string name="label_loading">This Is Empty View</string>
    <string name="main_title">عنوان اصلی</string>
    <string name="sub_title">عنوان فرعی</string>
    <string name="AllList">لیست کامل</string>
    <string name="bestSellerTitle">محصولات پرفروش</string>
    <string name="search_text">جستجو در زرین شاپ ...</string>
    <string name="search">جستجو</string>
    <string name="progressDialog_title">Please wait</string>
</resources>
