<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".Ofline_Fragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:layout_margin="7dp"
        android:id="@+id/offline_wifi_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_signal_wifi_off_black_24dp" />

    <TextView
        android:layout_margin="7dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_faild" />

    <TextView
        android:drawableEnd="@drawable/ic_wifi_tethering_black_24dp"
        android:drawablePadding="5dp"
        android:layout_margin="7dp"
        android:id="@+id/offline_check_network_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Checkـnetworkـsettings" />

    <Button

        android:background="@color/colorPrimaryDark"
        android:textColor="@color/tooglemenu"
        android:textStyle="bold"
        android:layout_margin="7dp"
        android:id="@+id/offline_retry_connect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/retry_connected" />

</LinearLayout>